--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "repository": "https://github.com/socialradar/batch-request",
   "main": "lib/batch-request.js",
   "dependencies": {
-    "bluebird": "~0.8.0-0"
+    "bluebird": "~0.8.0-0",
+    "lodash": "~2.2.1",
+    "validator": "~2.0.0"
   },
   "devDependencies": {
     "chai": "~1.8.0",
@@ -18,7 +20,9 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-simple-mocha": "~0.4.0",
     "mocha": "~1.13.0",
-    "supertest": "~0.8.0"
+    "supertest": "~0.8.0",
+    "grunt-bump": "0.0.11",
+    "express": "~3.4.4"
   },
   "keywords": [
     "batch",
