--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "bluebird": "~0.8.0-0",
     "lodash": "~2.2.1",
-    "validator": "~2.0.0"
+    "validator": "~2.0.0",
+    "request": "~2.27.0"
   },
   "devDependencies": {
     "chai": "~1.8.0",
