--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "bluebird": "~0.8.0-0",
+    "bluebird": "~0.8.5-1",
     "lodash": "~2.2.1",
     "validator": "~2.0.0",
-    "request": "~2.27.0"
+    "request": "~2.27.0",
+    "methods": "~0.1.0",
+    "superagent": "~0.15.7"
   },
   "devDependencies": {
     "chai": "~1.8.0",
