--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Batch Request - Utility library to enable a server to handle batch requests",
   "version": "0.0.1",
   "author": "Victor Quinn <mail@victorquinn.com>",
-  "homepage": "http://socialradar.github.io/batch-request",
+  "homepage": "http://batch-request.socialradar.com",
   "repository": "https://github.com/socialradar/batch-request",
   "main": "lib/batch-request.js",
   "scripts": {
