Move options tests out to their own file, add some more meat to it

--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,8 @@
   "trailing": true,
   "undef": true,
   "globals": {
+    "beforeEach": true,
+    "afterEach": true,
     "describe": true,
     "it": true
   }
